v10/docs/ModelsMetadataUpdateRequest.md
# ModelsMetadataUpdateRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int64** |  | [optional] 
**Metadata** | **map[string]string** |  | 

## Methods

### NewModelsMetadataUpdateRequest

`func NewModelsMetadataUpdateRequest(metadata map[string]string, ) *ModelsMetadataUpdateRequest`

NewModelsMetadataUpdateRequest instantiates a new ModelsMetadataUpdateRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsMetadataUpdateRequestWithDefaults

`func NewModelsMetadataUpdateRequestWithDefaults() *ModelsMetadataUpdateRequest`

NewModelsMetadataUpdateRequestWithDefaults instantiates a new ModelsMetadataUpdateRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsMetadataUpdateRequest) GetId() int64`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsMetadataUpdateRequest) GetIdOk() (*int64, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsMetadataUpdateRequest) SetId(v int64)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsMetadataUpdateRequest) HasId() bool`

HasId returns a boolean if a field has been set.

### GetMetadata

`func (o *ModelsMetadataUpdateRequest) GetMetadata() map[string]string`

GetMetadata returns the Metadata field if non-nil, zero value otherwise.

### GetMetadataOk

`func (o *ModelsMetadataUpdateRequest) GetMetadataOk() (*map[string]string, bool)`

GetMetadataOk returns a tuple with the Metadata field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetMetadata

`func (o *ModelsMetadataUpdateRequest) SetMetadata(v map[string]string)`

SetMetadata sets Metadata field to given value.



[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


